rework achievements to observable and add isLoading to own-user-reducer, when shift is updated + fixed orderby in own shifts in backend

--- a/frontend_lb_nx/src/styles.scss
+++ b/frontend_lb_nx/src/styles.scss
@@ -30,6 +30,25 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   align-items: center;
   height: 100%;
 }
+
+
+.fade-in-out{
+  animation: fadeInOut 1s ease-in-out infinite;
+}
+
+@keyframes fadeInOut {
+  0% {
+    opacity: 0;
+  }
+  45% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+
 /**
   fixes expansion panel animation issues
  */
